fixed spacing mobile

--- a/camcoffeesoc-site/src/routes/styles.scss
+++ b/camcoffeesoc-site/src/routes/styles.scss
@@ -31,7 +31,7 @@
 }
 
 .big-image {
-    width: 100%
+    width: 99vw;
 }
 
 .nav-bar {
